Address review feedback: fix layout shift, refactor regex, and update styling

--- a/djangoproject/scss/_console-tabs.scss
+++ b/djangoproject/scss/_console-tabs.scss
@@ -64,9 +64,12 @@
             }
 
             .clipboard-success {
+                @include monospace;
                 font-size: 80%;
                 color: var(--link-color);
                 margin-right: 6px;
+                white-space: nowrap;
+                line-height: 1;
 
                 &.fade-out {
                     opacity: 0;
